# starting-ragchatbot-codebase

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  QUERY_FLOW.md  QUERY_FLOW_DIAGRAM.md  QUERY_FLOW_MERMAID.md  RAG_DIAGNOSIS_REPORT.md  frontend-changes.md  pyproject.toml
backend/: ai_generator.py  app.py  debug_query.py  debug_rag_system.py  rag_system.py  search_tools.py  test_api_endpoint.py  test_claude_behavior.py  test_current_prompt.py  test_specific_content.py  test_updated_behavior.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_rag_integration.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
reference/: playwright-mcp-wsl-quickstart.md
reference/architecture/: QUERY_FLOW.md  QUERY_FLOW_DIAGRAM.md  QUERY_FLOW_MERMAID.md
scripts/: format.sh  lint.sh  quality.sh
